2009-01-09 Josh Kropf <josh@slashdev.ca>

   * JdpType.java (getDesc, setDesc): renamed to getDescription, setDescription


2008-12-02 Josh Kropf <josh@slashdev.ca>

    * SigtoolTask.java (execute): cleaned/fixed code that checks touch file age
      (executeSigtool): create touch files for each cod file signed
      (touch): accept full path to cod file


2008-12-01 Josh Kropf <josh@slashdev.ca>

    * AlxTask.java (executeAlx): omit xml declaration form generated .alx
    * BaseTask.java (isOutOfDate): removed method
    * SigtoolTask.java (addCod): removed method, no more <cod> child element
      (add): added method, accepts any resource collection type element
    * ApplicationType.java (generate, copyCodFiles): removed nested loops
      due to use of Union class in CodSetType
    * CodSetType.java (resources): use Union instead Vector<ResourceCollection>
    * Utils.java (isUpToDate): new methods


2008-12-01 Josh Kropf <josh@slashdev.ca>

    * ApplicationType.java (generate): use just file name instead of relative
      path for cod files in .alx file
    * Utils.java: new class, static methods for working with File/Resource
    * JadtoolTask.java: new class, the <jadtool> ant task


2008-11-30 Josh Kropf <josh@slashdev.ca>

    * AlxTask.java: new class, the <alx> ant task
    * ApplicationType.java: new class, subtype of <alx> ant task
    * BaseTask.java (execute): print version number to build log
    * CodSetType.java: new class, subtype of ApplicationType
    * RapcTask.java (execute): call superclass execute method
    * SigtoolTask.java (execute): call superclass execute method
    * etc/bb-ant-defs.xml: added alx/application/codset definitions


2008-11-26 Josh Kropf <josh@slashdev.ca>

    * EntryPointType.java, JdpType.java: applied patch by jwall1701 to support
      using resource bundles for entry point titles


2008-11-01 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java