@@ -1,4 +1,4 @@
-build.ver=1.0.1
+build.ver=1.0.2
 build.name=bb-ant-tools
 
 build.jar.file=${build.name}.jar
